--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
   <div id="container">
-    <h1 id="question">Do you love me, Taslima?</h1>
+    <h1 id="question">Do you love me, Shundriii ?</h1>
     <div class="buttons">
       <button class="yes" onclick="sayYes()">Yes</button>
       <button class="no" onclick="sayNo()">No</button>
@@ -140,7 +140,7 @@
       const container = document.getElementById('container');
       container.innerHTML = `
         <h1>How rude... 😠</h1>
-        <h2>Answer correctly : Do you love me, Taslima?</h2>
+        <h2>Answer correctly : Do you love me, Tukii?</h2>
         <div class="buttons">
           <button class="yes" onclick="sayYes()">Yes</button>
           <button class="no" onclick="sayNo()">No</button>
