--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Love Button Game</title>
+  <title>Sorry Madam</title>
   <style>
     body {
       background-color: #ffe6eb;
