--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sorry Madam</title>
+  <title>Love Button Game</title>
   <style>
+    * {
+      box-sizing: border-box;
+      touch-action: manipulation;
+    }
+
     body {
       background-color: #ffe6eb;
       font-family: Arial, sans-serif;
@@ -17,19 +22,20 @@
 
     #questionContainer {
       position: relative;
-      width: 350px;
-      height: 250px;
+      width: 90vw;
+      max-width: 350px;
+      height: 300px;
       background-color: #fff0f5;
       border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      text-align: center;
+      box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+      padding: 20px;
       overflow: hidden;
     }
 
     #heartLoader {
-      font-size: 20px;
+      font-size: 1.2rem;
       animation: pulse 3s infinite;
-      margin-top: 100px;
+      margin-top: 80px;
     }
 
     @keyframes pulse {
@@ -38,45 +44,46 @@
     }
 
     .btn {
-      padding: 10px 20px;
+      padding: 12px 20px;
       border: none;
       border-radius: 10px;
-      font-size: 18px;
-      cursor: pointer;
+      font-size: 16px;
       position: absolute;
-      transition: all 0.2s ease;
+      transition: transform 0.2s ease, top 0.2s ease, left 0.2s ease;
+      white-space: nowrap;
     }
 
     #yesBtn {
-      bottom: 20px;
-      left: 20px;
+      bottom: 15px;
+      left: 15px;
       background-color: #28a745;
       color: white;
     }
 
     #noBtn {
-      bottom: 20px;
-      right: 20px;
       background-color: #dc3545;
       color: white;
       width: 80px;
       height: 40px;
+      top: 15px;
+      right: 15px;
     }
 
     #resultContainer {
       display: none;
-      font-size: 24px;
+      font-size: 1.2rem;
       color: #ff2d55;
-      margin-top: 90px;
+      text-align: center;
+      margin-top: 100px;
     }
   </style>
 </head>
 <body>
   <div id="questionContainer">
-    <div id="heartLoader">Do you love me , Shundriii ❤️</div>
+    <div id="heartLoader">Do you love me, Shundriii ❤️</div>
     <button id="yesBtn" class="btn">Yes</button>
     <button id="noBtn" class="btn">No</button>
-    <div id="resultContainer">I love you too ..ami jantam 💖</div>
+    <div id="resultContainer">I love you too .. ami jantam 💖</div>
   </div>
 
   <script>
@@ -86,11 +93,13 @@
     const heartLoader = document.getElementById("heartLoader");
     const resultContainer = document.getElementById("resultContainer");
 
-    noBtn.addEventListener("mouseover", () => {
-      const maxX = questionContainer.offsetWidth - noBtn.offsetWidth;
-      const maxY = questionContainer.offsetHeight - noBtn.offsetHeight;
-      const newX = Math.floor(Math.random() * maxX);
-      const newY = Math.floor(Math.random() * maxY);
+    noBtn.addEventListener("mouseenter", () => {
+      const containerRect = questionContainer.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
+      const maxX = questionContainer.clientWidth - noBtn.offsetWidth;
+      const maxY = questionContainer.clientHeight - noBtn.offsetHeight;
+      const newX = Math.max(0, Math.floor(Math.random() * maxX));
+      const newY = Math.max(0, Math.floor(Math.random() * maxY));
       noBtn.style.left = `${newX}px`;
       noBtn.style.top = `${newY}px`;
     });
@@ -98,8 +107,8 @@
     yesBtn.addEventListener("click", () => {
       setTimeout(() => {
         heartLoader.style.display = "none";
-        resultContainer.style.display = "inherit";
-      }, 1000);
+        resultContainer.style.display = "block";
+      }, 500);
     });
   </script>
 </body>
