--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     #heartLoader {
       font-size: 1.2rem;
+      text-align: center;
       animation: pulse 3s infinite;
       margin-top: 80px;
     }
