Update love message and result text in index.html

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
   <div id="questionContainer">
-    <div id="heartLoader">Do you love me , Shundriii ❤️</div>
+    <div id="heartLoader">Will you be my valentine , Shundriii ❤️</div>
     
     <!-- CAT -->
     <div class="cat">
@@ -218,7 +218,7 @@
 
     <button id="yesBtn" class="btn">Yes</button>
     <button id="noBtn" class="btn">No</button>
-    <div id="resultContainer">I love you too ..ami jantam 💖</div>
+    <div id="resultContainer">I love you  ..💖</div>
   </div>
 
   <script>
